--- a/simple-case/pom.xml
+++ b/simple-case/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>top.jolyoulu</groupId>
-    <artifactId>word-count1</artifactId>
+    <artifactId>simple-case</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
