--- a/hadoop-2.x/pom.xml
+++ b/hadoop-2.x/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>top.jolyoulu</groupId>
-    <artifactId>simple-case</artifactId>
+    <artifactId>hadoop-2.x</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
